--- a/package.json
+++ b/package.json
@@ -23,15 +23,28 @@
     "typecheck": "tsc --project tsconfig.json"
   },
   "devDependencies": {
+    "@paleite/eslint-config": "canary",
+    "@paleite/eslint-config-base": "canary",
+    "@paleite/eslint-config-react": "canary",
+    "@paleite/eslint-config-typescript": "canary",
+    "@paleite/jest-config": "canary",
+    "@paleite/prettier-config": "canary",
+    "@paleite/tsconfig-node14": "canary",
     "@tsconfig/node14": "^1.0.1",
     "@types/jest": "^27.0.2",
     "@types/node": "^14.17.31",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-files": "^1.0.0",
     "eslint-plugin-diff": "^1.0.12",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^25.2.2",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-react": "^7.27.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "lint-staged": "^11.2.4",
