--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,10 +1,9 @@
 {
-  "extends": "./tsconfig.base.json",
+  "extends": "@paleite/tsconfig-node14",
   "compilerOptions": {
     "allowJs": true,
     "composite": true,
     "noEmit": true
   },
-
   "include": [".*.js", "*.js"]
 }
