--- a/package.json
+++ b/package.json
@@ -23,34 +23,30 @@
     "typecheck": "tsc --project tsconfig.json"
   },
   "devDependencies": {
-    "@paleite/eslint-config": "canary",
-    "@paleite/eslint-config-base": "canary",
-    "@paleite/eslint-config-react": "canary",
-    "@paleite/eslint-config-typescript": "canary",
-    "@paleite/jest-config": "canary",
-    "@paleite/prettier-config": "canary",
-    "@paleite/tsconfig-node14": "canary",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^14.17.31",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
-    "eslint": "^8.4.1",
+    "@paleite/eslint-config": "^1.0.0",
+    "@paleite/eslint-config-base": "^1.0.0",
+    "@paleite/eslint-config-typescript": "^1.0.0",
+    "@paleite/jest-config": "^1.0.0",
+    "@paleite/prettier-config": "^1.0.0",
+    "@paleite/tsconfig-node14": "^1.0.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^14.18.9",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-files": "^1.0.0",
     "eslint-plugin-diff": "^1.0.12",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jest": "^25.3.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^25.7.0",
+    "eslint-plugin-promise": "^6.0.0",
     "husky": "^7.0.4",
-    "jest": "^27.4.3",
-    "lint-staged": "^12.1.2",
+    "jest": "^27.4.7",
+    "lint-staged": "^12.3.0",
     "prettier": "^2.5.1",
-    "pretty-quick": "^3.1.2",
-    "ts-jest": "^27.1.1",
-    "typescript": "^4.5.2"
+    "pretty-quick": "^3.1.3",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.5.5"
   },
   "engines": {
     "node": ">=14.17.0"
