--- a/package.json
+++ b/package.json
@@ -31,30 +31,31 @@
     "typecheck": "tsc --project tsconfig.json"
   },
   "devDependencies": {
-    "@paleite/eslint-config": "^1.0.3",
-    "@paleite/eslint-config-base": "^1.0.3",
-    "@paleite/eslint-config-typescript": "^1.0.3",
-    "@paleite/jest-config": "^1.0.3",
-    "@paleite/prettier-config": "^1.0.3",
-    "@paleite/tsconfig-node14": "^1.0.3",
-    "@types/jest": "^28.1.4",
-    "@types/node": "^14.18.9",
-    "@typescript-eslint/eslint-plugin": "^5.30.4",
-    "@typescript-eslint/parser": "^5.30.4",
-    "eslint": "^8.19.0",
+    "@paleite/eslint-config": "^1.0.10-canary.3",
+    "@paleite/eslint-config-base": "^1.0.10-canary.3",
+    "@paleite/eslint-config-typescript": "^1.0.10-canary.3",
+    "@paleite/jest-config": "^1.0.10-canary.3",
+    "@paleite/prettier-config": "^1.0.10-canary.3",
+    "@paleite/tsconfig-node18": "^1.0.10-canary.3",
+    "@types/jest": "^29.2.3",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-files": "^1.0.0",
-    "eslint-plugin-diff": "^1.0.15",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-diff": "^2.0.1",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.5.3",
-    "eslint-plugin-promise": "^6.0.0",
-    "husky": "^8.0.1",
-    "jest": "^28.1.2",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
+    "eslint-plugin-jest": "^27.1.6",
+    "eslint-plugin-promise": "^6.1.1",
+    "husky": "^8.0.2",
+    "jest": "^29.3.1",
+    "lint-staged": "^13.0.4",
+    "prettier": "^2.8.0",
     "pretty-quick": "^3.1.3",
-    "ts-jest": "^28.0.5",
-    "typescript": "^4.7.4"
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.3"
   },
   "engines": {
     "node": "^14.17.0 || >= 16.0.0"
