Use SWC instead of typescript to compile

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,5 +5,8 @@
     "rootDir": "./src"
   },
   "include": ["src"],
-  "exclude": ["**/*.test.ts", "dist"]
+  "exclude": ["**/*.test.ts", "dist"],
+  "ts-node": {
+    "swc": true
+  }
 }
