--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "postpublish": "pinst --enable",
     "publish-canary": "np prerelease --tag=canary",
     "publish-stable": "np",
-    "start": "node dist",
+    "start": "ts-node src",
     "test": "jest --coverage",
     "typecheck": "tsc --project tsconfig.json"
   },
@@ -37,6 +37,7 @@
     "@paleite/jest-config": "^1.0.10-canary.3",
     "@paleite/prettier-config": "^1.0.10-canary.3",
     "@paleite/tsconfig-node18": "^1.0.10-canary.3",
+    "@swc/core": "^1.3.35",
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -54,7 +55,9 @@
     "lint-staged": "^13.0.4",
     "prettier": "^2.8.0",
     "pretty-quick": "^3.1.3",
+    "regenerator-runtime": "^0.13.11",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
   "engines": {
