--- a/package.json
+++ b/package.json
@@ -38,27 +38,28 @@
     "@paleite/prettier-config": "^1.0.10-canary.3",
     "@paleite/tsconfig-node18": "^1.0.10-canary.3",
     "@swc/core": "^1.3.35",
-    "@types/jest": "^29.2.3",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.0",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "caniuse-lite": "^1.0.30001517",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-files": "^1.0.0",
-    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-diff": "^2.0.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.1.6",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-promise": "^6.1.1",
-    "husky": "^8.0.2",
-    "jest": "^29.3.1",
-    "lint-staged": "^13.0.4",
-    "prettier": "^2.8.0",
+    "husky": "^8.0.3",
+    "jest": "^29.4.3",
+    "lint-staged": "^13.1.2",
+    "prettier": "^2.8.4",
     "pretty-quick": "^3.1.3",
     "regenerator-runtime": "^0.13.11",
-    "ts-jest": "^29.0.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": "^14.17.0 || >= 16.0.0"
